Add styling and additional inputs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-      <label class="block mb-2 text-base font-semibold" data-i18n="q4">What’s your biggest frustration with scheduling?</label>
+      <label class="block mb-2 text-base font-semibold" data-i18n="q4">What’s the most frustrating part of managing your bookings or client appointments?</label>
       <textarea name="frustration" class="w-full bg-gray-700 border border-gray-600 rounded px-4 py-2 text-white"></textarea>
     </div>
 
@@ -133,7 +133,7 @@
       q1: "What type of business do you run?",
       q2: "Do you use any appointment tools? If not, why?",
       q3: "What features do you need the most?",
-      q4: "What’s your biggest frustration with scheduling?",
+      q4: "What’s the most frustrating part of managing your bookings or client appointments?",
       q5: "Optional: Enter email for a discount & early access",
       f_sms: "SMS reminders",
       f_payment: "Advance payment (prevent no-shows)",
@@ -155,7 +155,7 @@
       q1: "Jaki rodzaj działalności prowadzisz?",
       q2: "Czy używasz narzędzi do rezerwacji? Jeśli nie, dlaczego?",
       q3: "Które funkcje są dla Ciebie najważniejsze?",
-      q4: "Co najbardziej frustruje Cię w obecnych rozwiązaniach?",
+      q4: "Co najbardziej frustruje Cię w zarządzaniu rezerwacjami lub wizytami klientów?",
       q5: "Opcjonalnie: Podaj e-mail, aby otrzymać zniżkę i wcześniejszy dostęp",
       f_sms: "SMS przypomnienia",
       f_payment: "Płatność z góry (brakujące wizyty)",
@@ -177,7 +177,7 @@
       q1: "Welche Art von Geschäft führen Sie?",
       q2: "Verwenden Sie Terminplanungstools? Wenn nicht, warum nicht?",
       q3: "Welche Funktionen sind für Sie am wichtigsten?",
-      q4: "Was frustriert Sie derzeit bei der Terminplanung?",
+      q4: "Was ist der frustrierendste Teil bei der Verwaltung Ihrer Buchungen oder Kundentermine?",
       q5: "Optional: Ihre E-Mail für einen Rabatt & frühen Zugang",
       f_sms: "SMS-Erinnerungen",
       f_payment: "Vorauszahlung (verhindert Nichterscheinen)",
